main/perl-socket/perl-socket-2.038-r1.log
pigz: not found
>>> perl-socket: Building main/perl-socket 2.038-r1 (using abuild 3.14.1-r4) started Sun, 18 May 2025 07:04:49 +0000
>>> perl-socket: Validating /home/packager/aports/main/perl-socket/APKBUILD...
>>> perl-socket: Analyzing dependencies...
>>> perl-socket: Installing for build: build-base perl perl-dev
(1/8) Installing libbz2 (1.0.8-r6)
(2/8) Installing perl (5.40.2-r0)
(3/8) Installing perl-utils (5.40.2-r0)
(4/8) Installing perl-dev (5.40.2-r0)
(5/8) Installing .makedepends-perl-socket (20250518.070451)
(6/8) Installing perl-error (0.17029-r2)
(7/8) Installing perl-git (2.47.2-r0)
(8/8) Installing git-perl (2.47.2-r0)
Executing busybox-1.37.0-r12.trigger
OK: 306 MiB in 89 packages
>>> perl-socket: Cleaning up srcdir
>>> perl-socket: Cleaning up pkgdir
>>> perl-socket: Cleaning up tmpdir
>>> perl-socket: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/Socket-2.038.tar.gz
Connecting to cpan.metacpan.org (146.75.122.217:443)
saving to '/var/cache/distfiles/Socket-2.038.tar.gz.part'
Socket-2.038.tar.gz. 100% |********************************| 46073  0:00:00 ETA
'/var/cache/distfiles/Socket-2.038.tar.gz.part' saved
>>> perl-socket: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/Socket-2.038.tar.gz
>>> perl-socket: Checking sha512sums...
Socket-2.038.tar.gz: OK
>>> perl-socket: Unpacking /var/cache/distfiles/Socket-2.038.tar.gz...
Checking HAS_SOCKADDR_SA_LEN...
test-0.c: In function 'main':
test-0.c:17:29: error: 'struct sockaddr' has no member named 'sa_len'
   17 |     { struct sockaddr sa; sa.sa_len = 0; }
      |                             ^
Checking I_NETINET_IP...
Checking if your kit is complete...
Looks good
Generating a Unix-style Makefile
Writing Makefile for Socket
Writing MYMETA.yml and MYMETA.json
"/usr/bin/perl" "/usr/share/perl5/core_perl/ExtUtils/xsubpp" -noprototypes -typemap '/usr/share/perl5/core_perl/ExtUtils/typemap' -typemap '/home/packager/aports/main/perl-socket/src/Socket-2.038/typemap'  Socket.xs > Socket.xsc
Running Mkbootstrap for Socket ()
chmod 644 "Socket.bs"
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
cp Socket.pm blib/lib/Socket.pm
mv Socket.xsc Socket.c
cc -c   -D_REENTRANT -D_GNU_SOURCE -D_GNU_SOURCE -fwrapv -fno-strict-aliasing -pipe -fstack-protector-strong -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fstack-clash-protection -Wformat -Werror=format-security -fno-plt -O2   -DVERSION=\"2.038\" -DXS_VERSION=\"2.038\" -fPIC "-I/usr/lib/perl5/core_perl/CORE"  -DI_NETINET_IP Socket.c
rm -f blib/arch/auto/Socket/Socket.so
cc  -shared -Os -fstack-clash-protection -Wformat -Werror=format-security -fno-plt -O2 -L/usr/local/lib -fstack-protector-strong  Socket.o  -o blib/arch/auto/Socket/Socket.so  \
      \
  
chmod 755 blib/arch/auto/Socket/Socket.so
Manifying 1 pod document
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
PERL_DL_NONLAZY=1 "/usr/bin/perl" "-MExtUtils::Command::MM" "-MTest::Harness" "-e" "undef *Test::Harness::Switches; test_harness(0, 'blib/lib', 'blib/arch')" t/*.t
t/getaddrinfo.t .. ok
t/getnameinfo.t .. ok
t/ip_mreq.t ...... ok
t/ipv6_mreq.t .... ok
t/sockaddr.t ..... ok
t/Socket.t ....... ok
t/socketpair.t ... ok
All tests successful.
Files=7, Tests=153,  4 wallclock secs ( 0.04 usr  0.02 sys +  0.47 cusr  0.09 csys =  0.62 CPU)
Result: PASS
>>> perl-socket: Entering fakeroot...
"/usr/bin/perl" -MExtUtils::Command::MM -e 'cp_nonempty' -- Socket.bs blib/arch/auto/Socket/Socket.bs 644
Manifying 1 pod document
Files found in blib/arch: installing files in blib/lib into architecture dependent library tree
Installing /home/packager/aports/main/perl-socket/pkg/perl-socket/usr/lib/perl5/vendor_perl/auto/Socket/Socket.so
Installing /home/packager/aports/main/perl-socket/pkg/perl-socket/usr/lib/perl5/vendor_perl/Socket.pm
Installing /home/packager/aports/main/perl-socket/pkg/perl-socket/usr/share/man/man3/Socket.3pm
>>> perl-socket*: Running postcheck for perl-socket
>>> perl-socket*: Preparing package perl-socket...
>>> perl-socket*: Stripping binaries
>>> perl-socket*: Scanning shared objects
>>> perl-socket*: Tracing dependencies...
	perl
	so:libc.musl-x86_64.so.1
>>> perl-socket*: Package size: 83.2 KB
>>> perl-socket*: Compressing data...
>>> perl-socket*: Create checksum...
pigz: not found
>>> perl-socket*: Create perl-socket-2.038-r1.apk
>>> perl-socket: Build complete at Sun, 18 May 2025 07:04:58 +0000 elapsed time 0h 0m 9s
>>> perl-socket: Cleaning up srcdir
>>> perl-socket: Cleaning up pkgdir
>>> perl-socket: Uninstalling dependencies...
(1/8) Purging .makedepends-perl-socket (20250518.070451)
(2/8) Purging perl-dev (5.40.2-r0)
(3/8) Purging perl-utils (5.40.2-r0)
(4/8) Purging git-perl (2.47.2-r0)
(5/8) Purging perl-git (2.47.2-r0)
(6/8) Purging perl-error (0.17029-r2)
(7/8) Purging perl (5.40.2-r0)
(8/8) Purging libbz2 (1.0.8-r6)
Executing busybox-1.37.0-r12.trigger
OK: 260 MiB in 81 packages
>>> perl-socket: Updating the main/x86_64 repository index...
>>> perl-socket: Signing the index...
pigz: not found
